@@ -32,49 +32,54 @@ namespace vmime
 {
 
 
-inline const bool isspace(const char_t c)
+class parserHelpers
 {
-	return (c == ' ' || c == '\t' || c == '\n' || c == '\r');
-}
+public:
+
+	static const bool isspace(const char_t c)
+	{
+		return (c == ' ' || c == '\t' || c == '\n' || c == '\r');
+	}
 
 
-inline const bool isdigit(const char_t c)
-{
-	return (c >= '0' && c <= '9');
-}
+	static const bool isdigit(const char_t c)
+	{
+		return (c >= '0' && c <= '9');
+	}
 
 
-inline const bool isalpha(const char_t c)
-{
-	return ((c >= 'a' && c <= 'z') || (c >= 'A' && c <= 'Z'));
-}
+	static const bool isalpha(const char_t c)
+	{
+		return ((c >= 'a' && c <= 'z') || (c >= 'A' && c <= 'Z'));
+	}
 
 
-inline const char_t tolower(const char_t c)
-{
-	if (c >= 'A' && c <= 'Z')
-		return ('a' + (c - 'A'));
-	else
-		return c;
-}
+	static const char_t tolower(const char_t c)
+	{
+		if (c >= 'A' && c <= 'Z')
+			return ('a' + (c - 'A'));
+		else
+			return c;
+	}
 
 
-// Checks whether a character is in the 7-bit US-ASCII charset
+	// Checks whether a character is in the 7-bit US-ASCII charset
 
-inline const bool isascii(const char_t c)
-{
-	const unsigned int x = static_cast <unsigned int>(c);
-	return (x <= 127);
-}
+	static const bool isascii(const char_t c)
+	{
+		const unsigned int x = static_cast <unsigned int>(c);
+		return (x <= 127);
+	}
 
 
-// Checks whether a character has a visual representation
+	// Checks whether a character has a visual representation
 
-inline const bool isprint(const char_t c)
-{
-	const unsigned int x = static_cast <unsigned int>(c);
-	return (x >= 0x20 && x <= 0x7E);
-}
+	static const bool isprint(const char_t c)
+	{
+		const unsigned int x = static_cast <unsigned int>(c);
+		return (x >= 0x20 && x <= 0x7E);
+	}
+};
 
 
 } // vmime
