@@ -4,6 +4,10 @@ VERSION 0.6.4cvs
 
 2005-02-05  Vincent Richard  <vincent@vincent-richard.net>
 
+ * parserHelpers.hpp: moved 'static' functions into 'parserHelpers' class.
+
+2005-02-05  Vincent Richard  <vincent@vincent-richard.net>
+
  * platforms/posix/posixHandler.cpp: removed extra '::' before
    numeric constants.
 
